src/objects/Admin_Setup__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Alerts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_View__c</fullName>
        <defaultValue>true</defaultValue>
        <label>List View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Opty_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create a new Opty task using this feature and assign to your Opty team memeber</description>
        <inlineHelpText>Create a new Opty task using this feature and assign to your Opty team memeber</inlineHelpText>
        <label>New Opty Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptySearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opty List Search</description>
        <inlineHelpText>Search for a record from the displayed Opty Records</inlineHelpText>
        <label>OptySearch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opty_Quick_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Edit Opty from the dashboard</description>
        <inlineHelpText>Edit limited set of fields of an Opty on the fly by enabling this feature</inlineHelpText>
        <label>Opty Quick Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opty_Record_Inline_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inline Menu display</description>
        <inlineHelpText>Menu for inline record actions</inlineHelpText>
        <label>Opty Record Inline Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opty_Record_count__c</fullName>
        <description>Number of records to display on Opty List</description>
        <inlineHelpText>Number of records to display on Opty List</inlineHelpText>
        <label>Opty Record count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opty_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sync the Opportunity Fields and related Lists</description>
        <inlineHelpText>Use this feature to sync your opportunity and it&apos;s related list data to a database that you desire</inlineHelpText>
        <label>Opty Sync</label>
        <type>Checkbox</type>
    </fields>
    <label>Admin Setup</label>
</CustomObject>